# UME

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  ume.toml  vcpkg-configuration.json  vcpkg.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  rfc_proposal.yml
.github/workflows/: ci-bench.yml  ci-build.yml  ci-format.yml  ci-lint.yml  ci-release.yml  ci-sanitize.yml  ci-test.yml
benchmarks/: CMakeLists.txt  bench_epoch_rcu.cpp  bench_event_analysis.cpp  bench_journal_writer.cpp  bench_m6_learning_prediction.cpp  bench_m7_advisor_twin.cpp  bench_mpsc_queue.cpp  bench_optimizer_prefetch.cpp  bench_replay_dispatcher.cpp  bench_scheduler_placement.cpp  bench_string_interner.cpp
ci/: performance-gates.json
core/: CMakeLists.txt
core/include/ume/: config.h  status.h  types.h  ume.h  version.h.in
core/include/ume/concurrency/: epoch_rcu.h  hazard_pointers.h  mpsc_queue.h  spsc_queue.h  string_interner.h
core/include/ume/event/: digital_twin.h  event.h  event_analyzer.h  event_dispatcher.h  event_schema.fbs  event_serializer.h  event_types.h  journal_reader.h  journal_writer.h  memory_advisor.h  memory_optimizer.h  memory_placement.h  memory_scheduler.h  memory_statistics.h  pattern_learning.h  prediction_engine.h  prefetch_engine.h  replay_engine.h
core/include/ume/platform/: clock.h  dynamic_library.h  mmap.h  platform.h  thread.h
core/src/: config.cpp
core/src/concurrency/: epoch_rcu.cpp  string_interner.cpp
core/src/event/: digital_twin.cpp  event_analyzer.cpp  event_dispatcher.cpp  event_serializer.cpp  journal_reader.cpp  journal_writer.cpp  memory_advisor.cpp  memory_optimizer.cpp  memory_placement.cpp  memory_scheduler.cpp  memory_statistics.cpp  pattern_learning.cpp  prediction_engine.cpp  prefetch_engine.cpp  replay_engine.cpp
core/src/platform/: clock.cpp  dynamic_library.cpp  mmap.cpp  thread.cpp
core/tests/: test_analysis_pipeline_integration.cpp  test_config.cpp  test_digital_twin.cpp  test_dynamic_library.cpp  test_epoch_rcu.cpp  test_event.cpp  test_event_analyzer.cpp  test_event_dispatcher.cpp  test_event_serializer.cpp  test_hazard_pointers.cpp  test_journal_writer.cpp  test_m6_pipeline_integration.cpp  test_m7_pipeline_integration.cpp  test_memory_advisor.cpp  test_memory_optimizer.cpp  test_memory_placement.cpp  test_memory_scheduler.cpp  test_memory_statistics.cpp  test_mmap.cpp  test_mpsc_queue.cpp  test_optimizer_prefetch_integration.cpp  test_pattern_learning.cpp  test_platform.cpp  test_prediction_engine.cpp  test_prefetch_engine.cpp  test_replay_engine.cpp  test_scheduler_pipeline_integration.cpp  test_spsc_queue.cpp  test_status.cpp  test_string_interner.cpp  test_thread.cpp  test_types.cpp
dashboard/: CMakeLists.txt  resources.qrc
dashboard/qml/: AboutPage.qml  ApplicationsPage.qml  DashboardPage.qml  DigitalTwinPage.qml  LogsPage.qml  Main.qml  MemoryAdvisorPage.qml  MemoryPage.qml  OptimizerPage.qml  PatternLearningPage.qml  PoliciesPage.qml  PredictionPage.qml  PrefetchPage.qml  SettingsPage.qml  StatisticsPage.qml  Theme.qml  TimelinePage.qml
dashboard/src/: main.cpp
dashboard/src/model/: engine_provider.h  http_telemetry_server.cpp  http_telemetry_server.h  mock_backend.cpp  mock_backend.h  real_engine_adapter.cpp  real_engine_adapter.h
dashboard/src/viewmodel/: advisor_viewmodel.cpp  advisor_viewmodel.h  dashboard_viewmodel.cpp  dashboard_viewmodel.h  digital_twin_viewmodel.cpp  digital_twin_viewmodel.h  memory_viewmodel.cpp  memory_viewmodel.h
docs/changelog/: CHANGELOG.md
docs/contributor/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
docs/rfcs/: 0000-rfc-template.md  0001-architecture-freeze.md
scripts/: bootstrap.ps1  bootstrap.sh  check-perf-gates.py
